# DEADLOCK-NETWORK

./: Cargo.toml  Gemini.md  README.md  program_keypair.json  rag_prompt.json
DEADSGOLD/: Cargo.toml  GEMINI.md  README.md  deadsgold-keypair.txt  default.nix  document_nix_assumptions.sh  flake.nix  generate_keypair.py  generate_program_keypair.py  hello.nix  mining_gui.py  program_keypair.json  pyproject.toml  requirements.txt  run_backend.py  run_gui.bat  run_gui.sh  setup.py  synopsis.txt  token.json  token_metadata.json  upload_metadata.py  verify.py
DEADSGOLD/.github/workflows/: test-flake.yml
DEADSGOLD/Deadsgold_program/: Cargo.toml
DEADSGOLD/api/: main.py
DEADSGOLD/backend/: main.py
DEADSGOLD/blockchain/: block.py  chain.py  transaction.py
DEADSGOLD/client_app/: Cargo.toml  create_token_metadata.py  edit_token_metadata.py  miner_keypair.json  mining_gui.py  requirements.txt  token.json
DEADSGOLD/client_app/src/: args.rs  main.rs
DEADSGOLD/client_app/src/command/: deadsgold_mine.rs  mod.rs
DEADSGOLD/coal_cli_repo/: Cargo.toml
DEADSGOLD/coal_cli_repo/src/: dynamic_fee.rs  main.rs  reprocess.rs  unequip.rs  utils.rs
DEADSGOLD/dead_api/: Cargo.toml
DEADSGOLD/dead_api/src/: lib.rs  state.rs
DEADSGOLD/deadsgold-miner/: Cargo.toml
DEADSGOLD/deadsgold-miner/src/: args.rs  main.rs  mine.rs  utils.rs
DEADSGOLD/deadsgold.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DEADSGOLD/dqn/: validator.py
DEADSGOLD/frontend/: package-lock.json  package.json
DEADSGOLD/frontend/src/: App.tsx  index.tsx
DEADSGOLD/gui/: deadsgold_client.py  main.py  main_gui.py
DEADSGOLD/java/: package-lock.json  package.json
DEADSGOLD/miner/: miner.py
DEADSGOLD/nix/solders/: default.nix
DEADSGOLD/node/: node.py
DEADSGOLD/react-app/src/: App.js
DEADSGOLD/rust_hasher/: Cargo.toml
DEADSGOLD/rust_hasher/src/: lib.rs
DEADSGOLD/solana_deadsgold_miner_program/: Cargo.toml
DEADSGOLD/solana_deadsgold_miner_program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
DEADSGOLD/solana_integration/: client.py
DEADSGOLD/solana_program/: Cargo.toml
DEADSGOLD/solana_program/src/: instruction.rs  lib.rs
DEADSGOLD/src/command/: mine.rs
DEADSGOLD/tests/: test_blockchain.py  test_miner.py
DEADSGOLD/token-metadata-script/: create-metadata.ts  package-lock.json  package.json  tsconfig.json  update-metadata.ts
DEADSGOLD/wallet/: wallet.py
(+27 files in other folders)
