[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deadsgold"
version = "0.1.0"
authors = [
  { name="Andreas Kloeckner", email="inform@tiker.net" },
]
description = "A project that uses pycuda."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "cryptography",
    "onnxruntime",
    "solana",
    "anchorpy",
    "numpy",
    "pytools>=2011.2",
    "decorator>=3.2.0",
    "Mako",
    "setuptools",
]

[project.urls]
"Homepage" = "https://github.com/DEADLOCK-NETWORK/DEADSGOLD"
