[package]
name = "rust_hasher"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_hasher"
crate-type = ["cdylib"]

[dependencies]
drillx = "2.1.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
core_affinity = "0.8.1"
num_cpus = "1.16.0"
rand = "0.8.4"
solana-sdk = "=2.1"
bytemuck = { version = "1.16", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1